--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -4,11 +4,10 @@
 }
 /* General Styles */
 .movie-card {
-  /* border: 10px solid #e50914;
-  border-radius: none; */
+  position: relative;
+  overflow: hidden;
   width: 200px;
   flex: 0 0 auto;
-  overflow: hidden;
   border-radius: 3px;
   transition: transdorm 0.3s ease, box-shadow 0.3s ease;
 }
@@ -27,11 +26,13 @@
 
 .movie-card-netflixLogo {
   position: absolute;
-  display: block;
+  top: 5%;
   width: 15%;
-  height: 35px;
-  box-shadow: 2px 20px 20px solid #001;
-  z-index: 1;
+  height: 20px;
+  box-shadow: 2px 7px 30px #000;
+  background-color: none;
+  border: none;
+  z-index: -1;
 }
 
 .movie-card-title {
@@ -79,22 +80,32 @@
 
 .movie-card .movie-card-details {
   position: absolute;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   min-width: 0;
-  overflow: hidden;
-  top: 100%;
   max-width: 100%;
+  overflow: hidden;
   color: #fff;
-  transition: top 0.8s ease, padding 0.8s ease;
+  transform: translateY(100%);
+  transition: transform 0.8s ease-in-out;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  z-index: 1000;
+}
+
+.movie-card:active .movie-card-details {
+  transform: translateY(100%);
 }
 
 /* Media Queries */
 
 @media (min-width: 1024px) {
   .movie-card {
+    position: relative;
+    overflow: hidden;
     width: 280px;
     height: 150px;
   }
@@ -114,14 +125,24 @@
     transition: transform 0.7s ease;
   }
 
-  .movie-card:hover .movie-card-details {
-    /* max-height: 150px; */
-    top: 6%;
+  .movie-card.hovered .movie-card-details {
     padding: 5px;
+    transform: translateY(5%);
   }
 
   .movie-card-banner-btm {
     top: 88%;
     left: 35%;
+  }
+
+  .movie-card-netflixLogo {
+    position: absolute;
+    top: 5%;
+    width: 15%;
+    height: 30px;
+    box-shadow: 2px 7px 30px #000;
+    background-color: none;
+    border: none;
+    z-index: 1000;
   }
 }
